--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>我的纯静态网站</title>
   </head>
   <body>
+    <video
+      autoplay
+      width="100%"
+      src="https://activity.hdslb.com/blackboard/activity68698/public/static/2xv.mp4"
+    ></video>
     <!-- 展示型标签 -->
     <div>这是我写的第一句话</div>
     <div>这是我第二句话 <span>这是第三句话</span></div>
@@ -14,6 +19,7 @@
     <button>这是我的一个点击按钮</button>
     <input />
     <input type="file" />
+    <input type="password" />
     <textarea></textarea>
     <select>
       <option value="student">学生</option>
@@ -33,7 +39,6 @@
       <input type="radio" id="girl" name="sex" value="girl" />
       <label for="girl">女</label>
     </div>
-    <input type="password" />
     <!-- <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
     <label for="vehicle2"> I have a car</label>
     <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat" />
@@ -44,10 +49,5 @@
     <img
       src="https://pic.leetcode-cn.com/1661602838-mnmhWP-20220827-202027.png"
     />
-    <video
-      loop
-      autoplay
-      src="https://activity.hdslb.com/blackboard/activity68698/public/static/2xv.mp4"
-    ></video>
   </body>
 </html>
